fixed_alignment_text_for_news_letter_input

--- a/frontend/src/components/newsLetter/NewsLetter.css
+++ b/frontend/src/components/newsLetter/NewsLetter.css
@@ -95,4 +95,7 @@
   .newsletter {
     text-align: center;
   }
+  .newsletter input {
+    text-align: center;
+  }
 }
